# discord-chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: api.rs  commands.rs  main.rs
src/api/: bard.rs  calculate.rs  calculator.rs  chattable.rs  cohere.rs
src/commands/: calc.rs  chat.rs  clac.rs  ping.rs
