[package]
name = "discord-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
reqwest = "0.11.17"
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shuttle-runtime = "0.16.0"
shuttle-secrets = "0.16.0"
shuttle-serenity = "0.16.0"
anyhow = "1.0.71"
lazy_static = "1.4.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
